# Online_course_web

./: README.md  db.sqlite3  pyproject.toml
apps/: urls.py
apps/certificates/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/courses/: admin.py  models.py  urls.py  views.py
apps/notifications/: admin.py  models.py  urls.py  views.py
apps/payments/: admin.py  models.py  serializers.py  urls.py  views.py
apps/progress/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/reviews/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
root/: drf_settings.py  settings.py
templates/: block.html
